--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -109,8 +109,8 @@ In the meantime, our findings imply that while large canopy trees are the most v
 # Introduction
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
-Globally, temperatures have risen $1.2^\circ$C since the 1850-1900 period [@rohdeBerkeleyEarthLand2020] and are expected to rise over pre-industrial levels of $1.6 - 4.3^{\circ}C$ by 2100 (IPCC 2014), accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities 2021; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Collectively, these impacts may lead to reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, decreased C storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [REFS].
+Globally, temperatures have risen $1.2^\circ$C since the 1850-1900 period [@rohdeBerkeleyEarthLand2020] and are expected to rise over pre-industrial levels of $1.6 - 4.3^{\circ}$C by 2100 (IPCC 2014), accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilitiesa; IPBES report], including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilitiesa; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilitiesa]. Collectively, these impacts may lead to reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, decreased C storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
@@ -164,7 +164,7 @@ The implication is that upper canopy leaves have substantially higher boundary l
 **Atmospheric concentrations carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
 Atmospheric CO~2~ concentrations tend to be higher near ground level at night, associated with plant and soil respiration, but the elevated $CO_{2}$ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Elevated $CO_{2}$ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are neglible for most of day when photosynthesis is occurring, pattern in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
 
-Relative humidity, $RH$, tends to be higher in the understory and decrease with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregor_tree_nodate].
+Relative humidity, $RH$, tends to be higher in the understory and decreases with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregor_tree_nodate].
 Dense-canopy forests maintain higher daily maximum $RH$ below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a]. 
 In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) -- the driving force of water loss from leaves, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Maximum $T_{air}$ and VPD in the understory are further decreased with increasing canopy height and LAI [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
 
@@ -198,19 +198,19 @@ and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fi
 
 **Nidhi's rearrangement:**
 
-~~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $g_a$; *i.e.*, boundary layer conductance) and $\lambda E$ (via $g_s$ ie. stomatal conductance and $E$ ie evaporation)[@bonan_ecological_2016].
+~~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $g_a$; *i.e.*, boundary layer conductance) and $\lambda E$ (via $g_s$ *ie.* stomatal conductance and $E$ ie evaporation)[@bonan_ecological_2016].
 
 $g_a$ and $g_s$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @PhotosyntheticAcclimationSimultaneous2004]. Low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low. Additionally, $T_{leaf}-T_{air}$ increases with humidity (Fig. `r fig_leaf_T`c) because reduced $ga$ stifles $E$ and $gs$ that dissapate heat [@songTreeSurfaceTemperature2020].
 
 Latent heat loss through maximum $g_s$, cools the leaf and decreases $T_{leaf}$-$T_{air}$, allowing coupling between leaf and air. However in conditions of low soil moisture during drought (Fig. `r fig_leaf_T`), greater temperature than $gs$ thermal optimum, and air dryness causing an increase in VPD, $gs$ becomes limited, thereby increasing $T_{leaf}$-$T_{air}$ [@bonan_ecological_2016]. Limitation to $gs$ can also exaggerate effects of biophysical factors that contribute to energy inputs such as, solar radiation, humidity and $T_{air}$ (Fig. `r fig_leaf_T`)[@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @dongBiophysicalHomoeostasisLeaf2017].
 
-Leaf size and physiology [see next section] influence $g_a$, $g_s$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer and higher $g_a$, that enables coupling with $T_{air}$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T` a). Therefore, smaller leaves with adequate water, will be most effective at cooling during high temperatures than larger leaves [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007;@fauset_differences_2018]. Additionally, under low raditation, large leaves can be cooler than small leaves due to greater $gs$ [(Fig. `r fig_leaf_T` d; @leighThickLeavesAvoid2012;@bonan_ecological_2016]. Sun leaves, such as in the upper canopies, have greater $gs$, due to greater stomatal density [Table 1] and lower thermal capacitance due to lower water potential than shade leaves. However, exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions [@millerOnlySunlitLeaves2021]. However, because shade leaves have higher thermal capacitance and comparitevly lower $gs$, when exposed to an increase in radiation or $T_{air}$, $T_{leaf}$-$T_{air}$ can easily become more elevated than sun leaves (Fig. `r fig_leaf_T`a)[@schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
+Leaf size and physiology [see next section] influence $g_a$, $g_s$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer and higher $g_a$, that enables coupling with $T_{air}$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T` a). Therefore, smaller leaves with adequate water, will be most effective at cooling during high temperatures than larger leaves [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007;@fauset_differences_2018]. Additionally, under low raditation, large leaves can be cooler than small leaves due to greater $g_s$ [Fig. `r fig_leaf_T` d, @leighThickLeavesAvoid2012;@bonan_ecological_2016]. Sun leaves, such as in the upper canopies, have greater $gs$, due to greater stomatal density (Table 1) and lower thermal capacitance due to lower water potential than shade leaves. However, exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions [@millerOnlySunlitLeaves2021]. However, because shade leaves have higher thermal capacitance and comparitevly lower $gs$, when exposed to an increase in radiation or $T_{air}$, $T_{leaf}$-$T_{air}$ can easily become more elevated than sun leaves (Fig. `r fig_leaf_T`a)[@schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
 
 **Within forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
 $T_{leaf}$ generally tracks $T_{air}$, where vertical gradient of $T_{air}$ depends on canopy structure and $LAI$ [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in sub canopies and the understory microclimate. The intensity of incoming radiation and $VPD$ in the upper canopy can limit $gs$, therefore, we would expect a stronger $T_{leaf}$ gradient in closed canopies where upper canopy leaves can be much warmer than below canopies layers [@millerOnlySunlitLeaves2021]. However, higher windspeeds and lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give them lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e) [@millerOnlySunlitLeaves2021].
-On the other hand, open canopies, or lower canopy $LAI$ allow more turbulent air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013]. 
+On the other hand, open canopies, or lower canopy $LAI$ allow more turbulent air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b]. 
 
-NEON sites (in Fig. `r fig_NEON_vertical`) might not exactly reflect the $T_{leaf}$ pattern we might expect, partly because $T_{bio}$ measured using infrared sensor, reflects a wide swath of biological temperatures. But, recent advances in $T_{leaf}$ modelling that we outline [see Scaling across Space and Time], will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature].~~   
+NEON sites (in Fig. `r fig_NEON_vertical`) might not exactly reflect the $T_{leaf}$ pattern we might expect, partly because $T_{bio}$ measured using infrared sensor, reflects a wide swath of biological temperatures. But, recent advances in $T_{leaf}$ modelling that we outline [see Scaling across Space and Time], will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature2021].~~   
 
 **Krista's version:**
 
@@ -235,14 +235,14 @@ Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limit
 ### In situ observations
 **Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in-situ $T_{leaf}$ observations.** 
 Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* / ~due to high evapotranspiration~, and therefore differs little between understory and canopy.
-In forests with dense canopies, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
+In forests with dense canopies, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high radiation load [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
 In contrast, in open forests with lower $LAI$, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light permeability, vertical air mixing, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
 Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
 Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 
 It is noteworthy that $T_{leaf}$ often differs substantially from that of branches and stems; for instance, exposed tropical tree bark can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
 Thus, the vegetation temperature ($T_{veg}$) measured using sensors that integrate across both leaves and woody vegetation (e.g., infrared sensors for $T_{veg}$ at NEON sites, Fig. `r fig_NEON_vertical`h) does not always equal $T_{leaf}$, particularly in settings where leaf area is low relative to woody vegetation (*i.e.*, low-LAI ecosystems and understories). 
-Recent advances in $T_{leaf}$ modeling (see "Scaling across Space and Time") will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature].
+Recent advances in $T_{leaf}$ modeling (see "Scaling across Space and Time") will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature2021].
 
 ## Leaf traits 
 
