--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -7917,21 +7917,24 @@
   number = {1}
 }
 
-@article{stillImagingCanopyTemperature,
+@article{stillImagingCanopyTemperature2021,
   title = {Imaging Canopy Temperature: Shedding (Thermal) Light on Ecosystem Processes},
   shorttitle = {Imaging Canopy Temperature},
   author = {Still, Christopher J. and Rastogi, Bharat and Page, Gerald F. M. and Griffith, Dan M. and Sibley, Adam and Schulze, Mark and Hawkins, Linnia and Pau, Stephanie and Detto, Matteo and Helliker, Brent R.},
+  date = {2021},
   journaltitle = {New Phytologist},
-  volume = {n/a},
+  volume = {230},
+  pages = {1746--1753},
   issn = {1469-8137},
   doi = {10.1111/nph.17321},
   url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.17321},
-  urldate = {2021-03-21},
-  abstract = {Canopy temperature (Tcan) is a key driver of plant function that emerges as a result of interacting biotic and abiotic processes and properties. However, understanding controls on Tcan and forecasting canopy responses to weather extremes and climate change is difficult due to sparse measurements of Tcan at appropriate spatial and temporal scales. Burgeoning observations of Tcan from thermal cameras enable evaluation of energy budget theory and better understanding of how environmental controls, leaf traits, and canopy structure influence temperature patterns. The canopy scale is relevant for connecting to remote sensing and testing biosphere model predictions. We anticipate that future breakthroughs in understanding of ecosystem responses to climate change will result from multi-scale observations of Tcan across a range of ecosystems.},
+  urldate = {2021-07-12},
+  abstract = {Canopy temperature Tcan is a key driver of plant function that emerges as a result of interacting biotic and abiotic processes and properties. However, understanding controls on Tcan and forecasting canopy responses to weather extremes and climate change are difficult due to sparse measurements of Tcan at appropriate spatial and temporal scales. Burgeoning observations of Tcan from thermal cameras enable evaluation of energy budget theory and better understanding of how environmental controls, leaf traits and canopy structure influence temperature patterns. The canopy scale is relevant for connecting to remote sensing and testing biosphere model predictions. We anticipate that future breakthroughs in understanding of ecosystem responses to climate change will result from multiscale observations of Tcan across a range of ecosystems.},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17321},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\ZAA9MMTC\\Still et al. - Imaging canopy temperature shedding (thermal) lig.pdf},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BE96XBZF\\Still et al. - 2021 - Imaging canopy temperature shedding (thermal) lig.pdf;C\:\\Users\\Me\\Zotero\\storage\\KQPR4WT8\\nph.html},
+  keywords = {canopy structure,canopy temperature,leaf metabolism,remote sensing,stress,thermal imaging},
   langid = {english},
-  number = {n/a}
+  number = {5}
 }
 
 @article{stinzianoWarmingDelaysAutumn2015,
