--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -933,6 +933,23 @@
   type = {Master of Science in Applied Ecology}
 }
 
+@article{carterExperimentalWarmingTropical,
+  title = {Experimental Warming across a Tropical Forest Canopy Height Gradient Reveals Minimal Photosynthetic and Respiratory Acclimation},
+  author = {Carter, Kelsey R. and Wood, Tana E. and Reed, Sasha C. and Butts, Kaylie M. and Cavaleri, Molly A.},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {n/a},
+  issn = {1365-3040},
+  doi = {10.1111/pce.14134},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.14134},
+  urldate = {2021-07-12},
+  abstract = {Tropical forest canopies cycle vast amounts of carbon, yet we still have a limited understanding of how these critical ecosystems will respond to climate warming. We implemented in situ leaf-level + 3°C experimental warming from the understory to the upper canopy of two Puerto Rican tropical tree species, Guarea guidonia and Ocotea sintenisii. After approximately 1 month of continuous warming, we assessed adjustments in photosynthesis, chlorophyll fluorescence, stomatal conductance, leaf traits and foliar respiration. Warming did not alter net photosynthetic temperature response for either species; however, the optimum temperature of Ocotea understory leaf photosynthetic electron transport shifted upward. There was no Ocotea respiratory treatment effect, while Guarea respiratory temperature sensitivity (Q10) was down-regulated in heated leaves. The optimum temperatures for photosynthesis (Topt) decreased 3–5°C from understory to the highest canopy position, perhaps due to upper canopy stomatal conductance limitations. Guarea upper canopy Topt was similar to the mean daytime temperatures, while Ocotea canopy leaves often operated above Topt. With minimal acclimation to warmer temperatures in the upper canopy, further warming could put these forests at risk of reduced CO2 uptake, which could weaken the overall carbon sink strength of this tropical forest.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.14134},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\5434TVT6\\Carter et al. - Experimental warming across a tropical forest cano.pdf;C\:\\Users\\Me\\Zotero\\storage\\PZZ3AEVE\\pce.html},
+  keywords = {electron transport,experimental leaf warming,photosynthesis,respiration,stomatal conductance,thermal acclimation},
+  langid = {english},
+  number = {n/a}
+}
+
 @article{casalPhotoreceptorSignalingNetworks2013,
   title = {Photoreceptor {{Signaling Networks}} in {{Plant Responses}} to {{Shade}}},
   author = {Casal, Jorge J.},
