brand new experimental warming paper

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -259,7 +259,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 Within-canopy, leaf traits vary along the canopy light gradient [*i.e.,* in sun and shade leaves, @casasSunShadeLeaves2011] at a leaf anatomical, structural and biochemical level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. 
 As much of our understanding of trait coordination is based on the leaf economics spectrum concept (Wright et al. 2004) was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], further research is needed to characterize trait relationships and responses through the vertical canopy. 
-It has been established that independent of light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. For example, LMA, photosynthetic capacity (per area) and $g_s$ have been observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000].  
+It has been established that independent of light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. For example, LMA, photosynthetic capacity (per area) and $g_s$ have been observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore, ontogeny is bound to play a role in thermal sensitivity [@carterExperimentalWarmingTropical; @niinemetsResponsesForestTrees2010a]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -319,7 +319,7 @@ nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConduc
 
 ### Stomatal conductance
 
-Maximum $g_s$ increases with light environment, and is thus higher in the sun exposed upper canopy than in subcanopy or understory leaves (Table 2). However, because of the high $VPD$ and irradiance experienced by sun leaves,  mid-day stomatal depression is prevalent in sun leaves but not in shade leaves.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. Higher maximum temperatures and $g_s$ influence leaf thermal sensitivity tolerance [@perezPhotosyntheticHeatTolerances2020], but exact mechanisms remain unclear. Additionally, $T_{opt}$ of $g_s$  did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], but sun leaves show a stronger decrease in $gs$ to rising temperature than shade leaves [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical]. 
+Maximum $g_s$ increases with light environment, and is thus higher in the sun exposed upper canopy than in subcanopy or understory leaves (Table 2). However, because of the high $VPD$ and irradiance experienced by sun leaves,  mid-day stomatal depression is prevalent in sun leaves but not in shade leaves.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. Higher maximum temperatures and $g_s$ influence leaf thermal sensitivity tolerance [@perezPhotosyntheticHeatTolerances2020], but exact mechanisms remain unclear. Additionally, $T_{opt}$ of $g_s$  did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], but sun leaves in the upper canopy show a stronger decrease in $gs$ to rising temperature than shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical]. 
 
 ### Photosynthesis
 
