--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -196,9 +196,9 @@ and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fi
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_fig3.png)
 
-**Nidhi's rearrangement:**
+**version 1 (for rest of biophyscial drivers subsection-- coauthors, please let us know which is better):**
 
-~~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $g_a$; *i.e.*, boundary layer conductance) and $\lambda E$ (via $g_s$ *ie.* stomatal conductance and $E$ ie evaporation)[@bonan_ecological_2016].
+Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $g_a$; *i.e.*, boundary layer conductance) and $\lambda E$ (via $g_s$ *ie.* stomatal conductance and $E$ ie evaporation)[@bonan_ecological_2016].
 
 $g_a$ and $g_s$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @PhotosyntheticAcclimationSimultaneous2004]. Low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low. Additionally, $T_{leaf}-T_{air}$ increases with humidity (Fig. `r fig_leaf_T`c) because reduced $ga$ stifles $E$ and $gs$ that dissapate heat [@songTreeSurfaceTemperature2020].
 
@@ -210,9 +210,8 @@ Leaf size and physiology [see next section] influence $g_a$, $g_s$, leaf thermal
 $T_{leaf}$ generally tracks $T_{air}$, where vertical gradient of $T_{air}$ depends on canopy structure and $LAI$ [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in sub canopies and the understory microclimate. The intensity of incoming radiation and $VPD$ in the upper canopy can limit $gs$, therefore, we would expect a stronger $T_{leaf}$ gradient in closed canopies where upper canopy leaves can be much warmer than below canopies layers [@millerOnlySunlitLeaves2021]. However, higher windspeeds and lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give them lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e) [@millerOnlySunlitLeaves2021].
 On the other hand, open canopies, or lower canopy $LAI$ allow more turbulent air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b]. 
 
-NEON sites (in Fig. `r fig_NEON_vertical`) might not exactly reflect the $T_{leaf}$ pattern we might expect, partly because $T_{bio}$ measured using infrared sensor, reflects a wide swath of biological temperatures. But, recent advances in $T_{leaf}$ modelling that we outline [see Scaling across Space and Time], will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature2021].~~   
 
-**Krista's version:**
+**version 2 (for rest of biophyscial drivers subsection-- coauthors, please let us know which is better):**
 
 **Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
