--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -294,7 +294,8 @@ Additionally, because older leaves reach maximum $T_{leaf}$ sooner than younger 
 ### Interspecific variation 
 
 Generally, the pattern of fundamental trait adaptation to light gradients across forest species is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. 
-However, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. Spatio-temporal gradients offer another axis for trait variation, for instance in early- and late-successional species [Ishii and Asano, 2007, @ishiiExploringRelationshipsCanopy2004a]. 
+However, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. 
+8Spatio-temporal gradients offer another axis for trait variation, for instance in early- and late-successional species [Ishii and Asano, 2007, @ishiiExploringRelationshipsCanopy2004a].* 
 
 
 Therefore, $T_{leaf}$ patterns within forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
@@ -374,13 +375,20 @@ The high temperature carbon compensation point of sun leaves is higher in isopre
 
 Vertical gradients in the biophysical environment shape which plant strategies, or sets of traits, are competitive in canopy versus understory conditions, thereby shaping community composition across size classes. 
 
+Numerous traits vary between understory and canopy species. (*this needs to be reconciled with interspecific portion of traits section*)
+
 Seasonal leaf-loss or gain can alter biophysical and $T_{leaf}$ gradient in the forest [@rey-sanchez_spatial_2016].
 Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. Within tropical species, the fraction of deciduous trees tends to increase across tree size classes, with understory species typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing-out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999].
 
 ### Demography
 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
-More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)* Demographic differences between canopy trees and understory trees can also influence their their ability to tolerate multiple stressors.Within species, tolerance of more than one biological and biophyical stressors can increase with tree height and light, enabled by non-structural carbon reserve [NSC], with smaller shaded trees being more sensitive due to lower NSC [@niinemetsResponsesForestTrees2010a]. However, growth also declines as trees age. This is partly because autotrophic respiration increases with age that declines NPP, whereas due to increase in morphological and anatomical complexity, GPP also increases [@IncreasingRespiratoryCosts]. Vertical biophysical conditions are bound to influence growth and whole tree functioning.
+There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)* 
+Demographic differences between canopy trees and understory trees can also influence their their ability to tolerate multiple stressors. 
+Within species, tolerance of more than one biological and biophyical stressors can increase with tree height and light, enabled by non-structural carbon reserve [NSC], with smaller shaded trees being more sensitive due to lower NSC [@niinemetsResponsesForestTrees2010a]. 
+However, growth also declines as trees age. 
+This is partly because autotrophic respiration increases with age that declines NPP, whereas due to increase in morphological and anatomical complexity, GPP also increases [@IncreasingRespiratoryCosts]. 
+Vertical biophysical conditions are bound to influence growth and whole tree functioning.
 
 Greater $VPD$ and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests, as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Whereas greater $RH$ can do the opposite, stifling evapotranspiration and thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes can cause droughts, that are more  detrimental to larger trees than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [@bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
 
