moved deciduousness content back to traits section, edited interspecific traits

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -291,11 +291,18 @@ Leaf age affects vulnerability to heat stress independent of light environment [
 Once leaves leaves are fully expanded and mature, heat tolerance decreases with leaf age [@zhouLeafageEffectsTemperature2015; REFS], as do $g_s$ and photosynthesis [with a few exceptions between species, @niinemetsLeafAgeDependent2016]. 
 Additionally, because older leaves reach maximum $T_{leaf}$ sooner than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015] **this needs some confirming by co-authors**.
 
+The timing of seasonal leaf loss or gain is influenced by vertical microclimate gradients, and in turn can alter biophysical and $T_{leaf}$ gradients in the forest [@rey-sanchez_spatial_2016].
+Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. 
+Within tropical deciduous species, the fraction of deciduous individuals tends to increase across tree size classes, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. 
+In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999].
+
 ### Interspecific variation 
 
+Vertical gradients in the biophysical environment shape which plant strategies, or sets of traits, are competitive in canopy versus understory conditions, thereby shaping community composition across size classes. 
 Generally, the pattern of fundamental trait adaptation to light gradients across forest species is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. 
+For instance, across tree size classes, there is an increase in the fractions of species that are isoprene-emitting (**REFS**) and deciduous [@conditQuantifyingDeciduousnessTropical2000c; @Meakem2018].
 However, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. 
-8Spatio-temporal gradients offer another axis for trait variation, for instance in early- and late-successional species [Ishii and Asano, 2007, @ishiiExploringRelationshipsCanopy2004a].* 
+*Spatio-temporal gradients offer another axis for trait variation, for instance in early- and late-successional species [Ishii and Asano, 2007, @ishiiExploringRelationshipsCanopy2004a].* 
 
 
 Therefore, $T_{leaf}$ patterns within forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
@@ -368,17 +375,8 @@ The high temperature carbon compensation point of sun leaves is higher in isopre
 
 ## Size-structuring within the ecosystem
 
-**Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism scale up to affect community composition, whole-tree ecology, and ecosystem ecology (Fig. `r fig_schematic`).** 
+**Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism scale up to affect whole-tree ecology, ecosystem ecology, and their temperature responses (Fig. `r fig_schematic`).** 
 
-
-### Size-structuring of communities
-
-Vertical gradients in the biophysical environment shape which plant strategies, or sets of traits, are competitive in canopy versus understory conditions, thereby shaping community composition across size classes. 
-
-Numerous traits vary between understory and canopy species. (*this needs to be reconciled with interspecific portion of traits section*)
-
-Seasonal leaf-loss or gain can alter biophysical and $T_{leaf}$ gradient in the forest [@rey-sanchez_spatial_2016].
-Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. Within tropical species, the fraction of deciduous trees tends to increase across tree size classes, with understory species typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing-out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999].
 
 ### Demography
 
