--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2830,6 +2830,20 @@
   number = {5}
 }
 
+@article{huImpactsCanopyUnderstory2021,
+  title = {Impacts of {{Canopy}} and {{Understory Nitrogen Additions}} on {{Stomatal Conductance}} and {{Carbon Assimilation}} of {{Dominant Tree Species}} in a {{Temperate Broadleaved Deciduous Forest}}},
+  author = {Hu, Yanting and Schäfer, Karina V. R. and Zhu, Liwei and Zhao, Ping and Zhao, Xiuhua and Ni, Guangyan and Zhang, Yaxing and Ye, Huiying and Zhao, Wanli and Shen, Weijun and Fu, Shenglei},
+  date = {2021-01-28},
+  journaltitle = {Ecosystems},
+  issn = {1435-0629},
+  doi = {10.1007/s10021-020-00595-4},
+  url = {https://doi.org/10.1007/s10021-020-00595-4},
+  urldate = {2021-07-12},
+  abstract = {Excess N deposition has aroused concerns about its negative impacts on forest ecosystems. A two-year study was conducted to assess the responses of stomatal conductance (Gc) and carbon assimilation (Anet) of dominant tree species (Liquidambar formosana, Quercus acutissima and Quercus variabilis) to increased N deposition at a canopy and understory N additions experimental platform in a temperate deciduous broadleaved forest. Five treatments included N addition of 25 and 50~kg~ha−1~y−1 onto either the canopy (C25 and C50) or the understory (U25 and U50), and a control treatment (CK, without N addition). Our results showed that neither canopy nor understory N addition had an impact on carboxylation capacity (Vcmax), the light saturated rate of electron transport (Jmax) and leaf-level net assimilation (AnL) of the studied tree species. Higher concentrations of N addition (U50 and C50 treatments) exerted negative impacts on Gc and Anet of L. formosana and Quercus acutissima under lower precipitation conditions, while lower concentrations of N addition (U25 and C25 treatments) had minimal impacts on overall ecophysiological function. The U50 treatment increased tree water use efficiency (WUE) of L. formosana in the second experimental year. Canopy and understory N addition generated differential effects on forest vegetation. The traditional approach with understory addition could not fully reflect the effects of increased N deposition on the canopy-associated assimilation processes.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GQF684KD\\Hu et al. - 2021 - Impacts of Canopy and Understory Nitrogen Addition.pdf},
+  langid = {english}
+}
+
 @article{hutchisonArchitectureDeciduousForest1986,
   title = {The {{Architecture}} of a {{Deciduous Forest Canopy}} in {{Eastern Tennessee}}, {{U}}.{{S}}.{{A}}.},
   author = {Hutchison, B. A. and Matt, D. R. and McMillen, R. T. and Gross, L. J. and Tajchman, S. J. and Norman, J. M.},
